Fixes viewing file at particular code line will appear 'behind' navbar
We now add an additional named anchor for each code line, which gets
shifted 100px to top.

--- a/stylesheets/common_.css
+++ b/stylesheets/common_.css
@@ -8,6 +8,14 @@ body {
     margin: 0 5px 5px 0;
 }
 
+.shift-top{
+    position: relative;
+    display: block;
+    height: 0;
+    width:0;    
+    top: -100px;
+}
+
 h4, h5{
     border-bottom: 1px solid #999999;
 }
